--- a/chatAppBackend/src/main/resources/application.properties
+++ b/chatAppBackend/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 spring.application.name=project
+#Database Configs
+spring.datasource.url=jdbc:postgresql://localhost:5432/demo
+spring.datasource.username=postgres
+spring.datasource.password=12345678
+spring.jpa.hibernate.ddl-auto=update
