--- a/.github/workflows/ChatApp.yaml
+++ b/.github/workflows/ChatApp.yaml
@@ -25,12 +25,13 @@ jobs:
       # Step 3: Build with Maven
       - name: Build with Maven
         run: mvn clean package
+        working-directory: chatAppBackend
 
       # Step 4: Copy the JAR (assuming one main JAR)
       - name: Copy JAR to a separate folder
         run: |
           mkdir -p output
-          cp target/*.jar output/
+          cp chatAppBackend/target/*.jar output/
 
       # Step 5: Upload artifact
       - name: Upload JAR artifact
