--- a/.github/workflows/ChatApp.yaml
+++ b/.github/workflows/ChatApp.yaml
@@ -24,7 +24,7 @@ jobs:
 
       # Step 3: Build with Maven
       - name: Build with Maven
-        run: mvn clean package
+        run: mvn clean package -DskipTests
         working-directory: chatAppBackend
 
       # Step 4: Copy the JAR (assuming one main JAR)
