--- a/.github/workflows/azure-db-deploy.yml
+++ b/.github/workflows/azure-db-deploy.yml
@@ -30,5 +30,5 @@ jobs:
           subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
           resourceGroupName: chatapp-rg
           template: ./infra/azure-db-resources.json
-          parameters: adminUsername=${{ secrets.DB_ADMIN_USERNAME }} adminPassword=${{ secrets.DB_ADMIN_PASSWORD }}
+          parameters: adminUsername=${{ secrets.PG_ADMIN_USERNAME }} adminPassword=${{ secrets.PG_ADMIN_PASSWORD }}
           deploymentName: chatapp-deployment
