--- a/.github/workflows/ChatApp.yml
+++ b/.github/workflows/ChatApp.yml
@@ -2,9 +2,7 @@ name: Build Chat App
 
 on:
   push:
-    branches: [master]
-  pull_request:
-    branches: [master]
+    branches: [main]
 
 jobs:
   build:
@@ -24,7 +22,7 @@ jobs:
 
       # Step 3: Build with Maven
       - name: Build with Maven
-        run: mvn clean package -DskipTests
+        run: mvn clean package
         working-directory: chatAppBackend
 
       # Step 4: Copy the JAR (assuming one main JAR)
