--- a/chatAppBackend/pom.xml
+++ b/chatAppBackend/pom.xml
@@ -58,6 +58,21 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Azure Identity -->
+		<dependency>
+			<groupId>com.azure</groupId>
+			<artifactId>azure-identity</artifactId>
+			<version>1.10.1</version>
+		</dependency>
+
+		<!-- Azure Key Vault Secrets -->
+		<dependency>
+			<groupId>com.azure</groupId>
+			<artifactId>azure-security-keyvault-secrets</artifactId>
+			<version>4.5.3</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
