--- a/chatAppBackend/src/main/resources/application.properties
+++ b/chatAppBackend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=project
 #Database Configs
-spring.datasource.url=jdbc:postgresql://localhost:5432/demo
-spring.datasource.username=postgres
-spring.datasource.password=12345678
+spring.datasource.url=jdbc:postgresql://chatapp-postgres.postgres.database.azure.com:5432/postgres?sslmode=require
+spring.datasource.username=
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
