--- a/.github/workflows/ChatApp.yml
+++ b/.github/workflows/ChatApp.yml
@@ -13,6 +13,13 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Login to Azure using OIDC
+        uses: azure/login@v1
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
       # Step 2: Set up Java 21
       - name: Set up JDK 21
         uses: actions/setup-java@v4
