--- a/chatAppBackend/src/main/resources/application.properties
+++ b/chatAppBackend/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=project
 #Database Configs
-spring.datasource.url=jdbc:postgresql://chatapp-postgres.postgres.database.azure.com:5432/postgres?sslmode=require
+#jdbc:postgresql://chatapp-postgres.postgres.database.azure.com:5432/postgres?sslmode=require
+spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
