--- a/.github/workflows/azure-storage-deploy.yml
+++ b/.github/workflows/azure-storage-deploy.yml
@@ -43,4 +43,6 @@ jobs:
             --name attachment-storage \
             --resource-group chatapp-rg \
             --template-file ./infra/azure-db-resources.json \
-            --parameters: storageAccountName="chatAppStore"
+            --parameters: storageAccountName="chatAppStore" \
+            --deny-settings-mode None \
+            --action-on-unmanage deleteResources
