--- a/.github/workflows/azure-backend-deployment.yml
+++ b/.github/workflows/azure-backend-deployment.yml
@@ -26,10 +26,12 @@ jobs:
 
       - name: Deploy ARM Template as Deployment Stack
         run: |
+          OPENAPI_CONTENT=$(cat openapi.yaml | sed 's/"/\\"/g' | tr -d '\n')
           az stack group create \
             --name chatapp-backend-stack \
             --resource-group chatapp-rg \
             --template-file ./infra/azure-backend-resources.json \
-            --parameters @infra/azure-backend-parameters.json \
             --deny-settings-mode None \
-            --action-on-unmanage deleteResources
+            --action-on-unmanage deleteResources \
+            --parameters @infra/azure-backend-parameters.json \
+                         openApiSpecContent="$OPENAPI_CONTENT"
