--- a/.github/workflows/azure-backend-deployment.yml
+++ b/.github/workflows/azure-backend-deployment.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Deploy ARM Template as Deployment Stack
         run: |
           OPENAPI_CONTENT=$(base64 -w 0 openapi.yaml)
-          az stack group validate \
+          az stack group create \
             --name chatapp-backend-stack \
             --resource-group chatapp-rg \
             --template-file ./infra/azure-backend-resources.json \
